--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -68,7 +68,7 @@
             <!-- <div class="row row-cols-2"> -->
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Helping you grow</h2>
-                <p>
+                <p class="info">
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
@@ -77,7 +77,7 @@
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Uniting All Your Employees and Team Members</h2>
-                <p>
+                <p class="info">
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
@@ -86,7 +86,7 @@
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Simple Fast Connection at Your Fingertips</h2>
-                <p>
+                <p class="info">
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
@@ -95,7 +95,7 @@
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Keep Track Of All Events, Notifications, and Alerts</h2>
-                <p>
+                <p class="info">
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
