Styles the Msg Content spacing

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -324,6 +324,7 @@ body > main > section.landingPanel3 > div > div > p {
 
 .msgContainer {
   padding: 5vmin;
+  margin-bottom: 5vmin;
 }
 .grid-container2{
   display: grid;
