Update home page copy

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -148,7 +148,7 @@
     </div>
     <div class="landingPanle5">
         <div class="left">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h1>
+            <h1>inTouch is the simplest way to stay connected with your team at scale.</h1>
         </div>
         <div class="right">
             <a class="btn btn-primary btn-lg" href="{% url 'signup' %}">Join Today</a class="btn btn-primary">
