--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -59,46 +59,38 @@
 </div>
 <section class="landing1">
     <div class="l1Header">
-        <div class="l1title">
-            <h1 style="text-align: center;">Communication For Large Scale</h1>
-            <h1 style="text-align: center;">Buisnesses Made Easy</h1>
+        <div class="l1titleabout">
+            <h1>Communication For Large Scale</h1>
+            <h1>Buisnesses Made Easy</h1>
         </div>
 
         <div class="grid-container">
             <!-- <div class="row row-cols-2"> -->
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Helping you grow</h2>
-                <p class="info">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                <p>
+                    While today's communcation tools are great for the general public, they do not serve businesses and teams who are working to be more efficient. inTouch builds communication while streamlining efficiency.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Uniting All Your Employees and Team Members</h2>
-                <p class="info">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                <p>
+                    inTouch allows managers to directly notify their team members via direct, individually customizable text messages with a single click. Team members will receive updates directly to their phone without the privacy concerns or annoyance of group texts.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Simple Fast Connection at Your Fingertips</h2>
-                <p class="info">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                <p>
+                    The rise in remote work is creating a market for consumer applications that are simple, easy to use and require no extra hardware. inTouch replaces cumbersome group texts while still allowing seamless communication between managers and team members.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Keep Track Of All Events, Notifications, and Alerts</h2>
-                <p class="info">
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                <p>
+                    inTouch uses Twilio as its API messaging service. Twilio is used by Fortune 500 companies all over the world. It is praised by developers and users alike for its dependability and security.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
