--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -362,4 +362,9 @@ justify-content: center;
 .l1titleabout > h1 {
   text-emphasis: left;
   line-height: 1;
+  margin-bottom: 2vmin;
+}
+.landing1about {
+  height: auto;
+  padding: 10vmin;
 }
