--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<section class="landing1about">
+<section class="landing1">
     <div class="l1Header">
         <div class="l1titleabout">
             <h1>Communication For Large Scale</h1>
